# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-03 22:15:14 GMT	John Goerzen <jgoerzen@complete.org>	patch-21

    Summary:
      Working prototype
    Revision:
      missingh--head--0.7--patch-21


    new files:
     testsrc/GZiptest.hs testsrc/gzfiles/.arch-ids/=id
     testsrc/gzfiles/.arch-ids/t1.gz.id testsrc/gzfiles/t1.gz

    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs testsrc/Tests.hs

    new directories:
     testsrc/gzfiles testsrc/gzfiles/.arch-ids


2004-12-03 22:03:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-20

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-20


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 21:54:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-19

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-19


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 21:43:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-18

    Summary:
      checkpoint
    Revision:
      missingh--head--0.7--patch-18


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 21:40:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-17

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-17


    new files:
     libsrc/MissingH/FileArchive/.arch-ids/=id
     libsrc/MissingH/FileArchive/GZip.hs

    modified files:
     ChangeLog libsrc/MissingH/Checksum/CRC32.hs
     libsrc/MissingH/Compression/Inflate.hs

    new directories:
     libsrc/MissingH/FileArchive
     libsrc/MissingH/FileArchive/.arch-ids


2004-12-03 21:18:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-16

    Summary:
      Little bit of hacking on Inflate to make it work nicer
    Revision:
      missingh--head--0.7--patch-16


    modified files: